# Transform_MovieToText

./: .editorconfig  .gitattributes  .gitignore  .releaserc.json  CHANGELOG.md  LICENSE  README.md  all_test_results.txt  all_test_results_v2.txt  all_test_results_v3.txt  b904_errors.txt  config.json  debug_boot.bat  debug_fts_del.py  debug_mgr.py  debug_mgr_inspect.py  debug_query.py  diag_history_v3.py  dshow_probe.txt  final_check_win.txt  fix_pyproject.py  flet.yaml  launch.bat  main.py  pyproject.toml  raw_ruff.txt  raw_ruff_2.txt  rebuild_toml.py  requirements_thin.txt  ruff_errors.txt  ruff_errors_ascii.txt  ruff_final_check.txt  ruff_final_final.txt  ruff_final_results.txt  ruff_report.txt  ruff_report_v2.txt  run.bat  test_collect_only.txt  test_collect_only_2.txt  test_collection_errors.txt  (+23 more)
.github/workflows/: android_build.yml  android_full_sync.yml  android_validation.yml  build-exe.yml  ci.yml  desktop_distribution.yml  release.yml
android/: build.gradle
android/app/: build.gradle
docs/: 機能要件非機能要件.md  設計思想.md  開発方針.md
docs/troubleshooting/: github_actions_recovery.md
docs/アイデアメモ/: web_marketing_plan.md
scripts/: build_exe.py  build_windows.bat  push.bat  run.bat
scripts/diagnostics/: debug_fts.py  diag_history.py
src/: app.py  config_manager.py  gemini_client.py  live_processor.py  logger.py  recorder.py  transcriber.py
src/controllers/: history_ctrl.py  minutes_ctrl.py  transcription_ctrl.py
src/core/: config_manager.py  constants.py  (+18 more)
test_logs/: test_all_results.txt  test_all_results_v2.txt  test_all_results_v2_utf8.txt  test_all_results_v3.txt  test_all_results_v3_utf8.txt  test_all_results_v4.txt  test_all_results_v4_utf8.txt  test_all_results_v5.txt  test_all_results_v5_utf8.txt  test_all_results_v7_utf8.txt  test_event_bus_results.txt
tests/: test_config_manager.py  test_controllers.py  test_error_resilience.py  test_fastembed_provider_pytest.py  test_gemini_client.py  test_hardening.py  test_history_embeddings.py  test_history_mgr.py  test_history_mgr_rigorous.py  test_live_processor.py  test_ollama_clients.py  test_ollama_provider_pytest.py  test_recorder.py
(+84 files in other folders)
