[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transform-movie-to-text"
version = "0.1.0"
description = "A UI app to extract text from video files using Whisper."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper",
    "google-genai",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"] # Basic errors, formatting, and imports
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

